# openenv-negotiation

./: .gitignore  BLOG.md  CLAUDE.md  Dockerfile  HF_BLOG.md  README.md  api.py  baseline.py  baseline_results.json  baseline_results_70b.json  curriculum.py  environment.py  graders.py  index.html  inference.py  inference_results.json  models.py  openenv.yaml  output_files.txt  pyproject.toml  requirements.txt  reward_curve_final.py  rewards.py  tasks.py  test_sim.py
.claude/: settings.local.json
server/: app.py
training/: Dockerfile  README_TRAIN.md  grpo_training.ipynb  requirements_train.txt  train.py
