[project]
name = "social-agent-negotiation"
version = "0.1.0"
description = "Multi-agent negotiation environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"